--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport"/>
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
     <meta content='Fastjs is a Powerful, simple and fast javascript library' name='description'
-          property="og:determiner">
+        property="og:determiner">
     <meta content='Fastjs,fastjs,frame' name='keywords'>
-    <meta content="code-ZsDdIs7awK" name="baidu-site-verification"/>
-    <meta name="sogou_site_verification" content="yRuR5sFIEi"/>
-    <meta content="Fastjs - Powerful, simple and fast javascript library" property="og:title"/>
+    <meta content="code-ZsDdIs7awK" name="baidu-site-verification" />
+    <meta name="sogou_site_verification" content="yRuR5sFIEi" />
+    <meta content="Fastjs - Powerful, simple and fast javascript library" property="og:title" />
+    <!-- <script src="https://js.stripe.com/v3"></script> -->
     <title>Fastjs - A Powerful, simple and fast javascript library</title>
 </head>
+
 <body>
-<div id="app"></div>
-<script type="module" src="./src/main.js"></script>
+    <div id="app"></div>
+    <script type="module" src="./src/main.js"></script>
 </body>
+
 </html>
