--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta content="code-ZsDdIs7awK" name="baidu-site-verification" />
     <meta name="sogou_site_verification" content="yRuR5sFIEi" />
     <meta content="Fastjs - Powerful, simple and fast javascript library" property="og:title" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no">
     <!-- <script src="https://js.stripe.com/v3"></script> -->
     <title>Fastjs - A Powerful, simple and fast javascript library</title>
 </head>
