--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <script>
-        sessionStorage.redirect = location.href;
+        sessionStorage.redirect = location.pathname.substring(1);
     </script>
     <meta http-equiv="refresh" content="0;URL='/'">
     <title>Redirecting</title>
