--- a/404.html
+++ b/404.html
@@ -7,6 +7,6 @@
     <title>Redirecting</title>
 </head>
 <body>
-    If you are not redirected automatically, please <a href="/public">click here</a>.
+    If you are not redirected automatically, please <a href="/">click here</a>.
 </body>
 </html>
