Feature: Router mode change to history (#18)
* update(page): update main pages

* update(vite): update vite config

* update(router): update router mode

* update(page): update 2 main pages

* update(page): update index.html

* update(page): update 404.html

* update(page): update 404.html

--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
-    <meta content='Fastjs is a Powerful, simple and fast javascript library' name='description'
+    <meta content='Fastjs is a useful, lightweight JavaScript library for any types of project.' name='description'
         property="og:determiner">
     <meta content='Fastjs,fastjs,frame' name='keywords'>
-    <meta content="code-ZsDdIs7awK" name="baidu-site-verification" />
-    <meta name="sogou_site_verification" content="yRuR5sFIEi" />
-    <meta content="Fastjs - Powerful, simple and fast javascript library" property="og:title" />
+    <meta content="Fastjs - Fly again with us" property="og:title" />
     <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no">
-    <!-- <script src="https://js.stripe.com/v3"></script> -->
-    <title>Fastjs - A Powerful, simple and fast javascript library</title>
+    <title>Fastjs - Fly again with us</title>
 </head>
 
 <body>
