update(page): update page, router logic

--- a/404.html
+++ b/404.html
@@ -1,12 +1,21 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-    <script>
-        sessionStorage.redirect = location.pathname.substring(1);
-    </script>
-    <meta http-equiv="refresh" content="0;URL='/'">
-    <title>Redirecting</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
+    <meta content='Fastjs is a useful, lightweight JavaScript library for any types of project.' name='description'
+          property="og:determiner">
+    <meta content='Fastjs,fastjs,frame' name='keywords'>
+    <meta content="Fastjs - Fly again with us" property="og:title" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no">
+    <title>Fastjs - Fly again with us</title>
 </head>
+
 <body>
-    If you are not redirected automatically, please <a href="/">click here</a>.
+<div id="app"></div>
+<script type="module" src="./src/main.js"></script>
 </body>
+
 </html>
