update(pages): update icon

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta content="Fastjs - Fly again with us" property="og:title" />
     <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no">
     <title>Fastjs - Fly again with us</title>
+    <link rel="icon" href="./icon.svg" type="image/x-icon" />
 </head>
 
 <body>
