chore: update page meta content

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
     <meta content='Fastjs is a useful, lightweight JavaScript library for any types of project.' name='description'
         property="og:determiner">
-    <meta content='Fastjs,fastjs,frame' name='keywords'>
+    <meta content='Fastjs,fastjs,frame,jsfast,library' name='keywords'>
     <meta content="Fastjs - Fly again with us" property="og:title" />
     <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no">
     <title>Fastjs - Fly again with us</title>
-    <link rel="icon" href="./icon.svg" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="./icon.ico" />
+    <link rel="icon" href="./icon.svg" type="image/svg+xml" />
 </head>
 
 <body>
