--- a/404.html
+++ b/404.html
@@ -1,21 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
-    <meta content='Fastjs is a useful, lightweight JavaScript library for any types of project.' name='description'
-          property="og:determiner">
-    <meta content='Fastjs,fastjs,frame' name='keywords'>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;"
+      name="viewport"
+    />
+    <meta
+      content="Fastjs is a useful, lightweight JavaScript library for any types of project."
+      name="description"
+      property="og:determiner"
+    />
+    <meta content="Fastjs,fastjs,frame" name="keywords" />
     <meta content="Fastjs - Fly again with us" property="og:title" />
-    <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no"
+    />
     <title>Fastjs - Fly again with us</title>
-</head>
+  </head>
 
-<body>
-<div id="app"></div>
-<script type="module" src="./src/main.js"></script>
-</body>
-
+  <body>
+    <div id="app"></div>
+    <script type="module" src="./src/main.js"></script>
+  </body>
 </html>
